# mnistRaw

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/neuralEngine/: layer.cpp  neuralNetwork.cpp  test.cpp
src/neuralEngine/include/: layer.h  neuralEngine.h  neuralNetwork.h  test.h
